--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
+    <title>Landing Page Homepage</title>
     <!-- BS CSS Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -33,10 +33,10 @@
             <div class="collapse navbar-collapse" id="nav2">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="#" class="nav-link">HOMEPAGE</a>
+                        <a href="index.html" class="nav-link">HOMEPAGE</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="nav-link">ARTICLES</a>
+                        <a href="article.html" class="nav-link">ARTICLES</a>
                     </li>
                 </ul>
             </div>
