--- a/article.html
+++ b/article.html
@@ -15,29 +15,29 @@
         defer></script>
 
 </head>
-
-<nav class="navbar bg-dark">
-    <div class="container navbar-dark">
-        <a href="#" class="navbar-brand">NASH Drug Development</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2">
-            <div class="navbar-toggler-icon"></div>
-        </button>
-        <div class="collapse navbar-collapse" id="nav2">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="index.html" class="nav-link">HOMEPAGE</a>
-                </li>
-                <li class="nav-item">
-                    <a href="article.html" class="nav-link">ARTICLES</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-<br>
-
 <body>
-
+    <nav class="navbar bg-dark">
+        <div class="container navbar-dark">
+            <a href="index.html" class="navbar-brand">Rencofilstat Drug Development</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2">
+                <div class="navbar-toggler-icon"></div>
+            </button>
+            <div class="collapse navbar-collapse" id="nav2">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a href="index.html" class="nav-link">HOMEPAGE</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">RENCOFILSTAT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="article.html" class="nav-link">ARTICLES</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <br>
 </body>
 
 </html>
