Change about.html's layout

--- a/about.html
+++ b/about.html
@@ -41,91 +41,55 @@
     <br>
 
     <!-- Content -->
-    <div class="container">
+    <div class="card text-center border-0 w-50 mx-auto">
         <div class="row">
-            <div class="col-6">
-                <div class="card text-center border-0">
-                    <div class="row">
-                        <div class="col-3">
-                            <img class="img-fluid" src="cycleA.gif" alt="Cyclophilin A">
-                        </div>
-                        <div class="col-9">
-                            <div class="card-body">
-                                <h5 class="card-title">Rencofilstat Binds to Cylophilin A</h5>
-                                <p class="card-text">Rencofilstat binds to Cyclophilin A, which blocks the binding of
-                                    Cyclophilin A
-                                    to specific receptors on inflammatory cells, decreasing infiltration of the cells
-                                    into
-                                    the
-                                    tissue and production of harmful inflammatory molecules, resulting in reduced
-                                    inflammatory
-                                    damage to the liver.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="card text-center border-0">
-                    <div class="row ">
-                        <div class="col-3">
-                            <img class="img-fluid" src="cycleB.gif" alt="Cyclophilin B">
-                        </div>
-                        <div class="col-9">
-                            <div class="card-body">
-                                <h5 class="card-title">Rencofilstat Binds to Cylophilin B</h5>
-                                <p class="card-text">Rencofilstat blocks the actions of Cylcophilin B, an important
-                                    regulator of
-                                    collagen production in stealate cells. This leads to a reduction in collagen
-                                    secretions
-                                    and
-                                    fibrotic scarring, a primary goal in the treatment of NASH.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="card text-center border-0">
-                    <div class="row ">
-                        <div class="col-3">
-                            <img class="img-fluid" src="cycleD.gif" alt="Cyclophilin B">
-                        </div>
-                        <div class="col-9">
-                            <div class="card-body">
-                                <h5 class="card-title">Rencofilstat Binds to Cylophilin D</h5>
-                                <p class="card-text">Rencofilstat binds to Cyclophiln D which prevents or reverses the
-                                    formation
-                                    of
-                                    pores in the mitochondrial membrane that cause mitochondria to rupture, allowing
-                                    mitochondria to
-                                    resume normal energy production, and enabling the survival of liver cells.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
+            <div class="col-3">
+                <img class="img-fluid" src="cycleA.gif" alt="Cyclophilin A">
             </div>
-            <div class="col-6">
-                <div class="card text-center border-0">
-                    <div class="row">
-                        <img class="card-img-top w-50 mx-auto" src="rencofilstat.gif" alt="Cyclophilin A">
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Rencofilstat</h5>
-                        <p class="card-text">Rencofilstat binds to Cyclophilin A, which blocks the binding of
-                            Cyclophilin A
-                            to specific receptors on inflammatory cells, decreasing infiltration of the cells
-                            into
-                            the
-                            tissue and production of harmful inflammatory molecules, resulting in reduced
-                            inflammatory
-                            damage to the liver.</p>
-                    </div>
+            <div class="col-9">
+                <div class="card-body">
+                    <h5 class="card-title">Rencofilstat Binds to Cylophilin A</h5>
+                    <p class="card-text">Rencofilstat binds to Cyclophilin A, which blocks the binding of Cyclophilin A
+                        to specific receptors on inflammatory cells, decreasing infiltration of the cells into the
+                        tissue and production of harmful inflammatory molecules, resulting in reduced inflammatory
+                        damage to the liver.</p>
                 </div>
             </div>
         </div>
     </div>
+    <br>
 
+    <div class="card text-center border-0 w-50 mx-auto">
+        <div class="row ">
+            <div class="col-3">
+                <img class="img-fluid" src="cycleB.gif" alt="Cyclophilin B">
+            </div>
+            <div class="col-9">
+                <div class="card-body">
+                    <h5 class="card-title">Rencofilstat Binds to Cylophilin B</h5>
+                    <p class="card-text">Rencofilstat blocks the actions of Cylcophilin B, an important regulator of
+                        collagen production in stealate cells. This leads to a reduction in collagen secretions and
+                        fibrotic scarring, a primary goal in the treatment of NASH.</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <br>
+
+    <div class="card text-center border-0 w-50 mx-auto">
+        <div class="row ">
+            <div class="col-3">
+                <img class="img-fluid" src="cycleD.gif" alt="Cyclophilin B">
+            </div>
+            <div class="col-9">
+                <div class="card-body">
+                    <h5 class="card-title">Rencofilstat Binds to Cylophilin D</h5>
+                    <p class="card-text">Rencofilstat binds to Cyclophiln D which prevents or reverses the formation of
+                        pores in the mitochondrial membrane that cause mitochondria to rupture, allowing mitochondria to
+                        resume normal energy production, and enabling the survival of liver cells.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <br>
 
