Initial article.html, added company images

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar bg-dark">
         <div class="container navbar-dark">
-            <a href="index.html" class="navbar-brand">Rencofilstat Drug Development</a>
+            <a href="index.html" class="navbar-brand">Rencofilstat</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2">
                 <div class="navbar-toggler-icon"></div>
             </button>
@@ -32,21 +32,57 @@
                         <a href="about.html" class="nav-link">RENCOFILSTAT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="article.html" class="nav-link">ARTICLES</a>
+                        <a href="article.html" class="nav-link">NASH ARTICLES</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <br>
 
+    <div class="divider"></div>
     <!-- Content -->
     <div class="card text-center border-0 w-50 mx-auto">
-        <div class="row">
-            <div class="col-3">
-                <img class="img-fluid" src="cycleA.gif" alt="Cyclophilin A">
+        <div class="row ">
+            <div class="col-xl-4 col-12 d-flex align-items-center">
+                <img class="img-fluid" src="images/rencofilstat.gif" alt="The small molecule Rencofilstat">
             </div>
-            <div class="col-9">
+            <div class="col-xl-8 col-12">
+                <div class="card-body">
+                    <h4 class="card-title">Rencofilstat</h4>
+                    <p class="card-text"> Rencofilstat (CRV-431) is under development for the treatment of
+                        Hepatocellular Carcinoma (HCC), Multiple Myeloma (MM), Kidney Fibrosis, Non-Alcoholic
+                        Steatohepatitis (NASH), Non-Alcoholic Fatty Liver Disease (NAFLD), Liver Fibrosis and Liver
+                        Cirrhosis.
+                        <br><br>
+                        Rencofilstat meets all of Hepion's criteria for an effective and unique pleiotropic liver disease drug.
+                        As a novel molecule chemically derived from a pharmacological class of therapeutic drugs used
+                        clinically for over 35 years, Rencofilstat has thus far demonstrated an excellent safety
+                        profile in all animal and clinical studies to date. Thanks to multiple, diverse mechanisms of
+                        action and its accumulation in the liver, Rencofilstat has demonstrated efficacy in distinct
+                        animal models of NASH. These findings are consistent with in vitro studies documenting
+                        mechanisms of action as an antiviral agent (HBV, HCV, HDV ), protection from cellular stress
+                        and death, anti-steatotic, anti-inflammatory, anti-fibrotic, and anti-cancer activities.
+                        <br><br>
+                        Thus, Rencofilstat is positioned to become a highly versatile therapeutic drug for the most
+                        prominent liver diseasesof our time. No other marketed drugs or NASH drug candidates in
+                        development address all these mechanisms.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="divider"></div>
+
+    </div>
+    <br>
+    <div class="card text-center border-0 w-50 mx-auto">
+        <div class="row">
+            <div class="col-lg-3 col-12">
+                <img class="img-fluid" src="images/cycleA.gif" alt="Cyclophilin A">
+            </div>
+            <div class="col-lg-9 col-12">
                 <div class="card-body">
                     <h5 class="card-title">Rencofilstat Binds to Cylophilin A</h5>
                     <p class="card-text">Rencofilstat binds to Cyclophilin A, which blocks the binding of Cyclophilin A
@@ -61,10 +97,10 @@
 
     <div class="card text-center border-0 w-50 mx-auto">
         <div class="row ">
-            <div class="col-3">
-                <img class="img-fluid" src="cycleB.gif" alt="Cyclophilin B">
+            <div class="col-lg-3 col-12">
+                <img class="img-fluid" src="images/cycleB.gif" alt="Cyclophilin B">
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-12">
                 <div class="card-body">
                     <h5 class="card-title">Rencofilstat Binds to Cylophilin B</h5>
                     <p class="card-text">Rencofilstat blocks the actions of Cylcophilin B, an important regulator of
@@ -75,13 +111,12 @@
         </div>
     </div>
     <br>
-
     <div class="card text-center border-0 w-50 mx-auto">
         <div class="row ">
-            <div class="col-3">
-                <img class="img-fluid" src="cycleD.gif" alt="Cyclophilin B">
+            <div class="col-lg-3 col-12">
+                <img class="img-fluid" src="images/cycleD.gif" alt="Cyclophilin B">
             </div>
-            <div class="col-9">
+            <div class="col-lg-9 col-sm-12">
                 <div class="card-body">
                     <h5 class="card-title">Rencofilstat Binds to Cylophilin D</h5>
                     <p class="card-text">Rencofilstat binds to Cyclophiln D which prevents or reverses the formation of
@@ -92,6 +127,8 @@
         </div>
     </div>
     <br>
+    <div class="divider"></div>
+    <!-- Divider -->
 
 
 
