--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navbar section -->
     <nav class="navbar bg-dark">
         <div class="container navbar-dark">
-            <a href="index.html" class="navbar-brand">Rencofilstat Drug Development</a>
+            <a href="index.html" class="navbar-brand">Rencofilstat Development</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2">
                 <div class="navbar-toggler-icon"></div>
             </button>
@@ -32,7 +32,7 @@
                         <a href="about.html" class="nav-link">RENCOFILSTAT</a>
                     </li>
                     <li class="nav-item">
-                        <a href="article.html" class="nav-link">ARTICLES</a>
+                        <a href="article.html" class="nav-link">NASH ARTICLES</a>
                     </li>
                 </ul>
             </div>
@@ -41,10 +41,10 @@
     <br>
     <!-- Content section -->
     <div class="roam-wrap">
-        <img src="rencofilstat.gif" alt="The molecule Reconfilstat" id="roam1">
-        <img src="rencofilstat.gif" alt="The molecule Reconfilstat" id="roam2">
-        <img src="rencofilstat.gif" alt="The molecule Reconfilstat" id="roam3">
-        <img src="rencofilstat.gif" alt="The molecule Reconfilstat" id="roam4">
+        <img src="images/rencofilstat.gif" alt="The molecule Reconfilstat" id="roam1">
+        <img src="images/rencofilstat.gif" alt="The molecule Reconfilstat" id="roam2">
+        <img src="images/rencofilstat.gif" alt="The molecule Reconfilstat" id="roam3">
+        <img src="images/rencofilstat.gif" alt="The molecule Reconfilstat" id="roam4">
     </div>
     <div class="container">
         <div class="card text-center">
@@ -66,7 +66,7 @@
     <div class="container box">
         <div class="row g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
-                <div class="card text text-center text-bg-success">
+                <div class="card text-center text-bg-success">
                     <div class="card-body">
                         <h5 class="card-title">Positive topline results from P2 ALTITUDE NASH.</h5>
                         <p class="card-text">ALTITUDE trial achieves primary and secondary endpoints, including
@@ -79,7 +79,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Updates on Ongoing P2 Clinical Program</h5>
                         <p class="card-text">Reviewing the status and tielines for the ongoing phase 2 NASH studies with
@@ -92,7 +92,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Early Enrollment Completion for P2 ALTITUDE NASH</h5>
                         <p class="card-text">Completed enrollment of 60 NASH stage 3 subjects in the Phase 2 ALTITUDE
@@ -105,7 +105,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Publication of P2A AMBITION Clinical Trial Results</h5>
                         <p class="card-text">Peer-reviewed journal, Hepatology Communications, has published a paper
@@ -118,7 +118,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Publication of Food Effect Study with Rencofilstat</h5>
                         <p class="card-text">Peer-reviewed journal, Clinical Pharmacology, has published the results of
@@ -131,7 +131,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Initiation of Dosing in P2 ALTITUDE NASH</h5>
                         <p class="card-text">It has dosed the first NASH stage 3 patient with Rencofilstat. The trial is
@@ -144,7 +144,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Initiation of P2B ASCEND NASH</h5>
                         <p class="card-text">It has screened the first subject in the ASCEND NASH clinical trial. The
@@ -157,7 +157,7 @@
             </div>
 
             <div class="col-sm-6">
-                <div class="card text text-center">
+                <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Receives FDA Orphan Drug Status Designation for Rencofilstat for
                             Treatment of Hepatocellular Carcinoma</h5>
