--- a/about.html
+++ b/about.html
@@ -17,9 +17,12 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark">
+    <nav class="navbar navbar-expand-md bg-dark">
         <div class="container navbar-dark">
-            <a href="index.html" class="navbar-brand">Rencofilstat</a>
+            <a href="index.html" class="navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                    fill="currentColor" class="bi bi-virus" viewBox="0 0 16 16">
+                    <path d="M8 0a1 1 0 0 1 1 1v1.402c0 .511.677.693.933.25l.7-1.214a1 1 0 0 1 1.733 1l-.701 1.214c-.256.443.24.939.683.683l1.214-.701a1 1 0 0 1 1 1.732l-1.214.701c-.443.256-.262.933.25.933H15a1 1 0 1 1 0 2h-1.402c-.512 0-.693.677-.25.933l1.214.701a1 1 0 1 1-1 1.732l-1.214-.7c-.443-.257-.939.24-.683.682l.701 1.214a1 1 0 1 1-1.732 1l-.701-1.214c-.256-.443-.933-.262-.933.25V15a1 1 0 1 1-2 0v-1.402c0-.512-.677-.693-.933-.25l-.701 1.214a1 1 0 0 1-1.732-1l.7-1.214c.257-.443-.24-.939-.682-.683l-1.214.701a1 1 0 1 1-1-1.732l1.214-.701c.443-.256.261-.933-.25-.933H1a1 1 0 1 1 0-2h1.402c.511 0 .693-.677.25-.933l-1.214-.701a1 1 0 1 1 1-1.732l1.214.701c.443.256.939-.24.683-.683l-.701-1.214a1 1 0 0 1 1.732-1l.701 1.214c.256.443.933.261.933-.25V1a1 1 0 0 1 1-1Zm2 5a1 1 0 1 0-2 0 1 1 0 0 0 2 0ZM6 7a1 1 0 1 0-2 0 1 1 0 0 0 2 0Zm1 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm5-3a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z" />
+                </svg></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav2">
                 <div class="navbar-toggler-icon"></div>
             </button>
@@ -29,7 +32,7 @@
                         <a href="index.html" class="nav-link">HOMEPAGE</a>
                     </li>
                     <li class="nav-item">
-                        <a href="about.html" class="nav-link">RENCOFILSTAT</a>
+                        <a href="about.html" class="nav-link active">RENCOFILSTAT</a>
                     </li>
                     <li class="nav-item">
                         <a href="article.html" class="nav-link">NASH ARTICLES</a>
@@ -54,7 +57,8 @@
                         Steatohepatitis (NASH), Non-Alcoholic Fatty Liver Disease (NAFLD), Liver Fibrosis and Liver
                         Cirrhosis.
                         <br><br>
-                        Rencofilstat meets all of Hepion's criteria for an effective and unique pleiotropic liver disease drug.
+                        Rencofilstat meets all of Hepion's criteria for an effective and unique pleiotropic liver
+                        disease drug.
                         As a novel molecule chemically derived from a pharmacological class of therapeutic drugs used
                         clinically for over 35 years, Rencofilstat has thus far demonstrated an excellent safety
                         profile in all animal and clinical studies to date. Thanks to multiple, diverse mechanisms of
