--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
             <div class="collapse navbar-collapse" id="nav2">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active">HOMEPAGE</a>
+                        <a href="index.html" class="nav-link active">HEPION</a>
                     </li>
                     <li class="nav-item">
                         <a href="about.html" class="nav-link">RENCOFILSTAT</a>
                     </li>
                     <li class="nav-item">
                         <a href="article.html" class="nav-link">NASH ARTICLES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="landscape.html" class="nav-link">NASH LANDSCAPE</a>
                     </li>
                 </ul>
             </div>
