--- a/article.html
+++ b/article.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="nav2">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">HOMEPAGE</a>
+                        <a href="index.html" class="nav-link">HEPION</a>
                     </li>
                     <li class="nav-item">
                         <a href="about.html" class="nav-link">RENCOFILSTAT</a>
@@ -33,11 +33,15 @@
                     <li class="nav-item">
                         <a href="article.html" class="nav-link active">NASH ARTICLES</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="landscape.html" class="nav-link">NASH LANDSCAPE</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
     <br>
+    
     <!-- DIVIDER -->
 
     <div class="py-4">
