--- a/landscape.html
+++ b/landscape.html
@@ -41,8 +41,8 @@
         </div>
     </nav>
 
-    <div class="container mx-auto my-2 p-2">
-        <table class="table table-striped">
+    <div class="container mt-3">
+        <table class="table table-striped ">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">DRUG NAME</th>
@@ -87,7 +87,7 @@
 
         <div class="text-center">
             <img src="images/rencofilstat.gif" class="rounded" alt="The small molecule Rencofilstat" width="300px">
-          </div>
+        </div>
     </div>
 </body>
 
