--- a/landscape.html
+++ b/landscape.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container mt-3">
+    <div class="container my-4">
         <table class="table table-striped ">
             <thead>
                 <tr class="table-dark">
@@ -84,11 +84,158 @@
                 </tr>
             </tbody>
         </table>
-
-        <div class="text-center">
-            <img src="images/rencofilstat.gif" class="rounded" alt="The small molecule Rencofilstat" width="300px">
-        </div>
     </div>
+    <div class="divider"></div>
+
+    <div class="container my-4">
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">HEPA-ALTITUDE</th>
+                    <th scope="col">75mg (n=23)</th>
+                    <th scope="col">150mg (n=21)</th>
+                    <th scope="col">225mg (n=21)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ALT</td>
+                    <td>-3.37%</td>
+                    <td>-13.01%</td>
+                    <td>-21.63%</td>
+                </tr>
+                <tr>
+                    <td>AST</td>
+                    <td>4.54%</td>
+                    <td>-8.64%</td>
+                    <td>4.68% </td>
+                </tr>
+                <tr>
+                    <td>ProC3</td>
+                    <td>-6.47%</td>
+                    <td>-11.12%</td>
+                    <td>-9.58%</td>
+                </tr>
+                <tr>
+                    <td>PIIINP</td>
+                    <td>2.75%</td>
+                    <td>0.47%</td>
+                    <td>5.6%</td>
+                </tr>
+                <tr>
+                    <td>TIMP1</td>
+                    <td>3.76%</td>
+                    <td>30.5%</td>
+                    <td>-3.9%</td>
+                </tr>
+                <tr>
+                    <td>Hyaluronic Acid </td>
+                    <td>11.67%</td>
+                    <td>-13.18%</td>
+                    <td>-10.67%</td>
+                </tr>
+                <tr>
+                    <td>ELF Score</td>
+                    <td>1.03%</td>
+                    <td>3.85%</td>
+                    <td>-2.51%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="container my-4">
+        <table class="table table-striped table-success">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">ProC3 +37.5 ng/ml</th>
+                    <th scope="col">75mg (n=23)</th>
+                    <th scope="col">150mg (n=21)</th>
+                    <th scope="col">225mg (n=21)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ALT</td>
+                    <td>-13.24%</td>
+                    <td>-32.24%</td>
+                    <td>-37.78%</td>
+                </tr>
+                <tr>
+                    <td>AST</td>
+                    <td>6.73%</td>
+                    <td>-30.72%</td>
+                    <td>-11.34%</td>
+                </tr>
+                <tr>
+                    <td>ProC3</td>
+                    <td>-3.39%</td>
+                    <td>-17.05%</td>
+                    <td>-16.23%</td>
+                </tr>
+                <tr>
+                    <td>PIIINP</td>
+                    <td>-1.22%</td>
+                    <td>-7.36%</td>
+                    <td>-21.48%</td>
+                </tr>
+                <tr>
+                    <td>TIMP1</td>
+                    <td>2.4%</td>
+                    <td>-6.69%</td>
+                    <td>-4.77%</td>
+                </tr>
+                <tr>
+                    <td>Hyaluronic Acid </td>
+                    <td>-4.56%</td>
+                    <td>6.99%</td>
+                    <td>-19.66%</td>
+                </tr>
+                <tr>
+                    <td>ELF Score</td>
+                    <td>-0.95%</td>
+                    <td>-1.64%</td>
+                    <td>-5.31%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+
+    <div class="container my-4">
+        <table class="table table-striped table-warning">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">AKRO-HARMONY</th>
+                    <th scope="col">75mg (n=23)</th>
+                    <th scope="col">150mg (n=21)</th>
+                    <th scope="col">225mg (n=21)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ALT</td>
+                    <td>-3.37%</td>
+                    <td>-13.01%</td>
+                    <td>-21.63%</td>
+                </tr>
+                <tr>
+                    <td>AST</td>
+                    <td>4.54%</td>
+                    <td>-8.64%</td>
+                    <td>4.68% </td>
+                </tr>
+                <tr>
+                    <td>AST</td>
+                    <td>4.54%</td>
+                    <td>-8.64%</td>
+                    <td>4.68% </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+
 </body>
 
 </html>
