Revised company names

--- a/landscape.html
+++ b/landscape.html
@@ -54,25 +54,25 @@
             <tbody>
                 <tr class="table-success">
                     <td>Rencofilstat</td>
-                    <td>Hepion Pharmaceuticals</td>
+                    <td>Hepion</td>
                     <td>Anti-Fibrosis</td>
                     <td>Small Molecule / Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
                     <td>Efruxiferimin</td>
-                    <td>Akero Therapeutics</td>
+                    <td>Akero </td>
                     <td>Metabolism</td>
                     <td>Protein / FGF21</td>
                 </tr>
                 <tr class="table-danger">
                     <td>Resmetirom</td>
-                    <td>Madrigal Pharmaceuticals</td>
+                    <td>Madrigal</td>
                     <td>Metabolism</td>
                     <td>Small Molecule / THR-β</td>
                 </tr>
                 <tr class="table-primary">
                     <td>VK2809</td>
-                    <td>Viking Therapeutics</td>
+                    <td>Viking </td>
                     <td>Metabolism</td>
                     <td>Protein / FGF21</td>
                 </tr>
