Testing mobile-layout

--- a/landscape.html
+++ b/landscape.html
@@ -56,7 +56,7 @@
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
                     <td>Anti-Fibrosis</td>
-                    <td>Small Molecule / Cyclophilin</td>
+                    <td>SM Molecule / Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
                     <td>Efruxiferimin</td>
@@ -68,7 +68,7 @@
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
                     <td>Metabolism</td>
-                    <td>Small Molecule / THR-β</td>
+                    <td>SM Molecule / THR-β</td>
                 </tr>
                 <tr class="table-primary">
                     <td>VK2809</td>
@@ -80,7 +80,7 @@
                     <td>Pegozafermin</td>
                     <td>89bio</td>
                     <td>Metabolism</td>
-                    <td>Small Molecule / THR-β</td>
+                    <td>SM Molecule / THR-β</td>
                 </tr>
             </tbody>
         </table>
