Testing mobile-layout #2

--- a/landscape.html
+++ b/landscape.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container my-4">
+    <div class="container my-4 p-1">
         <table class="table table-striped ">
             <thead>
                 <tr class="table-dark">
@@ -56,31 +56,31 @@
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
                     <td>Anti-Fibrosis</td>
-                    <td>SM Molecule / Cyclophilin</td>
+                    <td>SM Molecule/Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
                     <td>Efruxiferimin</td>
                     <td>Akero </td>
                     <td>Metabolism</td>
-                    <td>Protein / FGF21</td>
+                    <td>Protein/FGF21</td>
                 </tr>
                 <tr class="table-danger">
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
                     <td>Metabolism</td>
-                    <td>SM Molecule / THR-β</td>
+                    <td>SM Molecule/THR-β</td>
                 </tr>
                 <tr class="table-primary">
                     <td>VK2809</td>
                     <td>Viking </td>
                     <td>Metabolism</td>
-                    <td>Protein / FGF21</td>
+                    <td>Protein/FGF21</td>
                 </tr>
                 <tr class="table-info">
                     <td>Pegozafermin</td>
                     <td>89bio</td>
                     <td>Metabolism</td>
-                    <td>SM Molecule / THR-β</td>
+                    <td>SM Molecule/THR-β</td>
                 </tr>
             </tbody>
         </table>
