Testing mobile-layout #4

--- a/landscape.html
+++ b/landscape.html
@@ -55,7 +55,7 @@
                 <tr class="table-success">
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
-                    <td>Anti-Fibrosis</td>
+                    <td>Fibrosis</td>
                     <td>Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
