Final testing mobile-layout

--- a/landscape.html
+++ b/landscape.html
@@ -55,31 +55,31 @@
                 <tr class="table-success">
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
-                    <td>Fibrosis</td>
+                    <td>Anti-Fibrosis</td>
                     <td>Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
                     <td>Efruxiferimin</td>
                     <td>Akero </td>
-                    <td>Metabolism</td>
+                    <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
                 <tr class="table-danger">
                     <td>Resmetirom</td>
                     <td>Madrigal</td>
-                    <td>Metabolism</td>
+                    <td>Metabolic</td>
                     <td>THR-β</td>
                 </tr>
                 <tr class="table-primary">
                     <td>VK2809</td>
                     <td>Viking </td>
-                    <td>Metabolism</td>
+                    <td>Metabolic</td>
                     <td>FGF21</td>
                 </tr>
                 <tr class="table-info">
                     <td>Pegozafermin</td>
                     <td>89bio</td>
-                    <td>Metabolism</td>
+                    <td>Metabolic</td>
                     <td>THR-β</td>
                 </tr>
             </tbody>
