Completed company-result-contents landscape.html

--- a/landscape.html
+++ b/landscape.html
@@ -55,7 +55,7 @@
                 <tr class="table-success">
                     <td>Rencofilstat</td>
                     <td>Hepion</td>
-                    <td>Anti-Fibrosis</td>
+                    <td>Fibrosis</td>
                     <td>Cyclophilin</td>
                 </tr>
                 <tr class="table-warning">
@@ -98,6 +98,9 @@
                 </tr>
             </thead>
             <tbody>
+                <tr class="table-dark border-bottom-1">
+                    <th class="text-center" scope="col" colspan=4>Percent Change from Baseline in Key NASH Biomarkers After Four Months Treatment with Rencofilstat</th>
+                </tr>
                 <tr>
                     <td>ALT</td>
                     <td>-3.37%</td>
@@ -140,15 +143,15 @@
                     <td>3.85%</td>
                     <td>-2.51%</td>
                 </tr>
-                <thead>
-                    <tr class="table-dark">
-                        <th scope="col">ProC3 +37.5 ng/ml</th>
-                        <th scope="col">75mg (n=23)</th>
-                        <th scope="col">150mg (n=21)</th>
-                        <th scope="col">225mg (n=21)</th>
-                    </tr>
-                </thead>
-            <tbody>
+                <tr class="table-dark border-bottom-1">
+                    <th class="text-center" scope="col" colspan=4>Percent Change From Baseline in NASH Biomarkers in Subjects with ProC3 37.5 ng/ml</th>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col">75mg (n=10)</th>
+                    <th scope="col">150mg (n=7)</th>
+                    <th scope="col">225mg (n=6)</th>
+                </tr>
                 <tr>
                     <td>ALT</td>
                     <td>-13.24%</td>
@@ -195,7 +198,6 @@
         </table>
     </div>
 
-    </div>
     <div class="divider"></div>
 
     <div class="container my-4">
@@ -203,35 +205,220 @@
             <thead>
                 <tr class="table-dark">
                     <th scope="col">AKRO-HARMONY</th>
-                    <th scope="col">75mg (n=23)</th>
-                    <th scope="col">150mg (n=21)</th>
-                    <th scope="col">225mg (n=21)</th>
+                    <th scope="col">Placebo (n=41)</th>
+                    <th scope="col">28mg (n=38)</th>
+                    <th scope="col">50mg (n=34)</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>20%</td>
+                    <td>39%</td>
+                    <td>41%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>15%</td>
+                    <td>47%</td>
+                    <td>76%</td>
+                </tr>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis & NASH Resolution</td>
+                    <td>5%</td>
+                    <td>29%</td>
+                    <td>41%</td>
+                </tr>
+                <tr class="table-dark border-bottom-1">
+                    <th class="text-center" scope="col" colspan=4>Liver Fat and Key Markers of Fibrosis and Liver Injury</th>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col">Placebo (n=~41)</th>
+                    <th scope="col">28mg (n=~37)</th>
+                    <th scope="col">50mg (n=~35)</th>
+                </tr>
+                <tr>
+                    <td>HEPATIC Fat Fraction</td>
+                    <td>-6%</td>
+                    <td>-52%</td>
+                    <td>-64%</td>
+                </tr>
+                <tr>
                     <td>ALT</td>
-                    <td>-3.37%</td>
-                    <td>-13.01%</td>
-                    <td>-21.63%</td>
+                    <td>-4%</td>
+                    <td>-38%</td>
+                    <td>-47%</td>
                 </tr>
                 <tr>
                     <td>AST</td>
-                    <td>4.54%</td>
-                    <td>-8.64%</td>
-                    <td>4.68% </td>
+                    <td>-2%</td>
+                    <td>-39%</td>
+                    <td>-49%</td>
                 </tr>
                 <tr>
-                    <td>AST</td>
-                    <td>4.54%</td>
-                    <td>-8.64%</td>
-                    <td>4.68% </td>
+                    <td>ProC3 (ug/L)</td>
+                    <td>0.1</td>
+                    <td>-5.1</td>
+                    <td>-5.2</td>
+                </tr>
+                <tr>
+                    <td>ELF Score</td>
+                    <td>0.1</td>
+                    <td>-0.6</td>
+                    <td>-0.7</td>
+                </tr>
+                <tr>
+                    <td>Liver Stiffness (Fibroscan)</td>
+                    <td>-2%</td>
+                    <td>-39%</td>
+                    <td>-49%</td>
                 </tr>
             </tbody>
         </table>
     </div>
+    <div class="divider"></div>
 
+    <div class="container my-4">
+        <table class="table table-striped table-danger">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">MDGL-MAESTRO-NASH</th>
+                    <th scope="col">Placebo (n=318)</th>
+                    <th scope="col">80mg (n=316)</th>
+                    <th scope="col">100mg (n=321)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>NASH Resolution with >= 2 Point Reduction</td>
+                    <td>10%</td>
+                    <td>26%</td>
+                    <td>30%</td>
+                </tr>
+                <tr>
+                    <td>Improvement >= 1 Stage Of Fibrosis</td>
+                    <td>14%</td>
+                    <td>24%</td>
+                    <td>26%</td>
+                </tr>
+                <tr class="table-dark border-bottom-1">
+                    <th class="text-center" scope="col" colspan=4>Key Secondary Endpoint (24 weeks)</th>
+                </tr>
+                <tr>
+                    <td>Low-Density Lipoprotein Cholesterol Lowering (LDL-C)</td>
+                    <td>-1%</td>
+                    <td>-12%</td>
+                    <td>-16%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
 
+    <div class="container my-4">
+        <table class="table table-striped table-primary">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">VKTX-VOYAGE</th>
+                    <th scope="col">Placebo (n=62)</th>
+                    <th scope="col">1mg QD (n=17)</th>
+                    <th scope="col">2.5mg QD (n=58)</th>
+                    <th scope="col">5mg QOD (n=36)</th>
+                    <th scope="col">10mg QOD (n=56)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Mean Relative Change in Liver Fat</td>
+                    <td>-3.7%</td>
+                    <td>-16.6%</td>
+                    <td>-45.3%</td>
+                    <td>-36.8%</td>
+                    <td>-51.7%</td>
+                </tr>
+                <tr>
+                    <td>Median Relative Change in Liver Fat</td>
+                    <td>-5.4%</td>
+                    <td>-37.5%</td>
+                    <td>-48.1%</td>
+                    <td>-42.5%</td>
+                    <td>-55.1%</td>
+                </tr>
+                <tr>
+                    <td>Percentage of Patients >= 30% Reduction in Liver Fat</td>
+                    <td>13.6%</td>
+                    <td>52.9%</td>
+                    <td>77.6%</td>
+                    <td>66.7%</td>
+                    <td>84.9%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="divider"></div>
+    <div class="container my-4">
+        <table class="table table-striped table-info">
+            <thead>
+                <tr class="table-dark">
+                    <th scope="col">ETNB-ENLIVEN</th>
+                    <th scope="col">Placebo (n=61)</th>
+                    <th scope="col">15mg QW (n=14)</th>
+                    <th scope="col">30mg QW QD (n=66)</th>
+                    <th scope="col">44mg Q2W (n=51)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Improvement > 1 Stage Of Fibrosis</td>
+                    <td>7%</td>
+                    <td>22%</td>
+                    <td>26%</td>
+                    <td>27%</td>
+                </tr>
+                <tr>
+                    <td>NASH Resolution</td>
+                    <td>2%</td>
+                    <td>37%</td>
+                    <td>23%</td>
+                    <td>26%</td>
+                </tr>
+                <tr class="table-dark border-bottom-1">
+                    <th class="text-center" scope="col" colspan=5>Liver Non-Invasive Tests (NITs) - Biomarkers</th>
+                </tr>
+                <tr class="table-dark">
+                    <th scope="col"></th>
+                    <th scope="col" colspan="2">Placebo (n=61)</th>
+                    <th scope="col">30mg QW QD (n=66)</th>
+                    <th scope="col">44mg Q2W (n=51)</th>
+                </tr>
+                <tr>
+                    <td>Liver Fat Content</td>
+                    <td colspan="2">-14%</td>
+                    <td>-52%</td>
+                    <td>-54%</td>
+                </tr>
+                <tr>
+                    <td>ALT</td>
+                    <td colspan="2">-5%</td>
+                    <td>-42%</td>
+                    <td>-32%</td>
+                </tr>
+                <tr>
+                    <td>Liver Stiffness</td>
+                    <td colspan="2">0.7</td>
+                    <td>-3.0</td>
+                    <td>-2.4</td>
+                </tr>
+                <tr>
+                    <td>ProC3</td>
+                    <td colspan="2">6%</td>
+                    <td>-18%</td>
+                    <td>-17%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 </html>
