--- a/landscape.html
+++ b/landscape.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-md bg-dark">
+    <nav class="navbar navbar-expand-lg bg-dark">
         <div class="container navbar-dark">
             <a href="index.html" class="navbar-brand"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-virus" viewBox="0 0 16 16">
                     <path d="M8 0a1 1 0 0 1 1 1v1.402c0 .511.677.693.933.25l.7-1.214a1 1 0 0 1 1.733 1l-.701 1.214c-.256.443.24.939.683.683l1.214-.701a1 1 0 0 1 1 1.732l-1.214.701c-.443.256-.262.933.25.933H15a1 1 0 1 1 0 2h-1.402c-.512 0-.693.677-.25.933l1.214.701a1 1 0 1 1-1 1.732l-1.214-.7c-.443-.257-.939.24-.683.682l.701 1.214a1 1 0 1 1-1.732 1l-.701-1.214c-.256-.443-.933-.262-.933.25V15a1 1 0 1 1-2 0v-1.402c0-.512-.677-.693-.933-.25l-.701 1.214a1 1 0 0 1-1.732-1l.7-1.214c.257-.443-.24-.939-.682-.683l-1.214.701a1 1 0 1 1-1-1.732l1.214-.701c.443-.256.261-.933-.25-.933H1a1 1 0 1 1 0-2h1.402c.511 0 .693-.677.25-.933l-1.214-.701a1 1 0 1 1 1-1.732l1.214.701c.443.256.939-.24.683-.683l-.701-1.214a1 1 0 0 1 1.732-1l.701 1.214c.256.443.933.261.933-.25V1a1 1 0 0 1 1-1Zm2 5a1 1 0 1 0-2 0 1 1 0 0 0 2 0ZM6 7a1 1 0 1 0-2 0 1 1 0 0 0 2 0Zm1 4a1 1 0 1 0 0-2 1 1 0 0 0 0 2Zm5-3a1 1 0 1 0-2 0 1 1 0 0 0 2 0Z" />
@@ -41,8 +41,8 @@
         </div>
     </nav>
 
-    <div class="container my-4">
-        <table class="table table-striped ">
+    <div class="container my-4 mx-0 px-0">
+        <table class="table table-striped">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">DRUG NAME</th>
@@ -87,7 +87,7 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4">
+    <div class="container my-4 mx-0">
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -98,7 +98,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr class="table-dark border-bottom-1">
+                <tr class="table-dark">
                     <th class="text-center" scope="col" colspan=4>Percent Change from Baseline in Key NASH Biomarkers After Four Months Treatment with Rencofilstat</th>
                 </tr>
                 <tr>
@@ -143,7 +143,7 @@
                     <td>3.85%</td>
                     <td>-2.51%</td>
                 </tr>
-                <tr class="table-dark border-bottom-1">
+                <tr class="table-dark">
                     <th class="text-center" scope="col" colspan=4>Percent Change From Baseline in NASH Biomarkers in Subjects with ProC3 37.5 ng/ml</th>
                 </tr>
                 <tr class="table-dark">
@@ -200,7 +200,7 @@
 
     <div class="divider"></div>
 
-    <div class="container my-4">
+    <div class="container my-4 mx-0">
         <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
@@ -229,7 +229,7 @@
                     <td>29%</td>
                     <td>41%</td>
                 </tr>
-                <tr class="table-dark border-bottom-1">
+                <tr class="table-dark">
                     <th class="text-center" scope="col" colspan=4>Liver Fat and Key Markers of Fibrosis and Liver Injury</th>
                 </tr>
                 <tr class="table-dark">
@@ -279,7 +279,7 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4">
+    <div class="container my-4 mx-0">
         <table class="table table-striped table-danger">
             <thead>
                 <tr class="table-dark">
@@ -316,12 +316,11 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4">
+    <div class="container my-4 mx-0">
         <table class="table table-striped table-primary">
             <thead>
                 <tr class="table-dark">
                     <th scope="col">VKTX-VOYAGE</th>
-                    <th scope="col">Placebo (n=62)</th>
                     <th scope="col">1mg QD (n=17)</th>
                     <th scope="col">2.5mg QD (n=58)</th>
                     <th scope="col">5mg QOD (n=36)</th>
@@ -331,7 +330,6 @@
             <tbody>
                 <tr>
                     <td>Mean Relative Change in Liver Fat</td>
-                    <td>-3.7%</td>
                     <td>-16.6%</td>
                     <td>-45.3%</td>
                     <td>-36.8%</td>
@@ -339,7 +337,6 @@
                 </tr>
                 <tr>
                     <td>Median Relative Change in Liver Fat</td>
-                    <td>-5.4%</td>
                     <td>-37.5%</td>
                     <td>-48.1%</td>
                     <td>-42.5%</td>
@@ -347,7 +344,6 @@
                 </tr>
                 <tr>
                     <td>Percentage of Patients >= 30% Reduction in Liver Fat</td>
-                    <td>13.6%</td>
                     <td>52.9%</td>
                     <td>77.6%</td>
                     <td>66.7%</td>
@@ -357,7 +353,7 @@
         </table>
     </div>
     <div class="divider"></div>
-    <div class="container my-4">
+    <div class="container my-4 mx-0">
         <table class="table table-striped table-info">
             <thead>
                 <tr class="table-dark">
@@ -383,7 +379,7 @@
                     <td>23%</td>
                     <td>26%</td>
                 </tr>
-                <tr class="table-dark border-bottom-1">
+                <tr class="table-dark">
                     <th class="text-center" scope="col" colspan=5>Liver Non-Invasive Tests (NITs) - Biomarkers</th>
                 </tr>
                 <tr class="table-dark">
