--- a/landscape.html
+++ b/landscape.html
@@ -87,7 +87,7 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4 mx-0">
+    <div class="container my-4 mx-0 px-0">
         <table class="table table-striped table-success">
             <thead>
                 <tr class="table-dark">
@@ -200,7 +200,7 @@
 
     <div class="divider"></div>
 
-    <div class="container my-4 mx-0">
+    <div class="container my-4 mx-0 px-0">
         <table class="table table-striped table-warning">
             <thead>
                 <tr class="table-dark">
@@ -279,7 +279,7 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4 mx-0">
+    <div class="container my-4 mx-0 px-0">
         <table class="table table-striped table-danger">
             <thead>
                 <tr class="table-dark">
@@ -316,7 +316,7 @@
     </div>
     <div class="divider"></div>
 
-    <div class="container my-4 mx-0">
+    <div class="container my-4 mx-0 px-0">
         <table class="table table-striped table-primary">
             <thead>
                 <tr class="table-dark">
@@ -353,7 +353,7 @@
         </table>
     </div>
     <div class="divider"></div>
-    <div class="container my-4 mx-0">
+    <div class="container my-4 mx-0 px-0">
         <table class="table table-striped table-info">
             <thead>
                 <tr class="table-dark">
@@ -415,6 +415,8 @@
             </tbody>
         </table>
     </div>
+    <div class="divider"></div>
+
 </body>
 
 </html>
