Fixed bugs/errors, completed ALPHA-verison

--- a/about.html
+++ b/about.html
@@ -40,10 +40,8 @@
             </div>
         </div>
     </nav>
-
-    <div class="divider"></div>
     <!-- Content -->
-    <div class="card text-center border-0 w-50 mx-auto">
+    <div class="card w-50 text-center mx-auto my-4 bg-primary-subtle border-0 shadow">
         <div class="row ">
             <div class="col-xl-4 col-12 d-flex align-items-center">
                 <img class="img-fluid" src="images/rencofilstat.gif" alt="The small molecule Rencofilstat">
@@ -51,22 +49,20 @@
             <div class="col-xl-8 col-12">
                 <div class="card-body">
                     <h4 class="card-title">Rencofilstat</h4>
-                    <p class="card-text"> Rencofilstat (CRV-431) is under development for the treatment of
-                        Hepatocellular Carcinoma (HCC), Multiple Myeloma (MM), Kidney Fibrosis, Non-Alcoholic
+                    <p class="card-text"> Rencofilstat is under development for the treatment of
+                        Hepatocellular Carcinoma, Multiple Myeloma, Kidney Fibrosis, Non-Alcoholic
                         Steatohepatitis (NASH), Non-Alcoholic Fatty Liver Disease (NAFLD), Liver Fibrosis and Liver
                         Cirrhosis.
                         <br><br>
-                        Rencofilstat meets all of Hepion's criteria for an effective and unique pleiotropic liver
-                        disease drug.
                         As a novel molecule chemically derived from a pharmacological class of therapeutic drugs used
                         clinically for over 35 years, Rencofilstat has thus far demonstrated an excellent safety
                         profile in all animal and clinical studies to date. Thanks to multiple, diverse mechanisms of
                         action and its accumulation in the liver, Rencofilstat has demonstrated efficacy in distinct
                         animal models of NASH. These findings are consistent with in vitro studies documenting
-                        mechanisms of action as an antiviral agent (HBV, HCV, HDV ), protection from cellular stress
+                        mechanisms of action as an antiviral agent, protection from cellular stress
                         and death, anti-steatotic, anti-inflammatory, anti-fibrotic, and anti-cancer activities.
                         <br><br>
-                        Thus, Rencofilstat is positioned to become a highly versatile therapeutic drug for the most
+                        Rencofilstat is positioned to become a highly versatile therapeutic drug for the most
                         prominent liver diseasesof our time. No other marketed drugs or NASH drug candidates in
                         development address all these mechanisms.
                     </p>
@@ -74,13 +70,7 @@
             </div>
         </div>
     </div>
-    <br>
-
-    <div class="divider"></div>
-
-    </div>
-    <br>
-    <div class="card text-center border-0 w-50 mx-auto">
+    <div class="card text-center border-0 w-50 mx-auto my-4 bg-warning-subtle shadow">
         <div class="row">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleA.gif" alt="Cyclophilin A">
@@ -96,9 +86,7 @@
             </div>
         </div>
     </div>
-    <br>
-
-    <div class="card text-center border-0 w-50 mx-auto">
+    <div class="card text-center border-0 w-50 mx-auto my-4 bg-info-subtle shadow">
         <div class="row ">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleB.gif" alt="Cyclophilin B">
@@ -113,8 +101,7 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class="card text-center border-0 w-50 mx-auto">
+    <div class="card text-center border-0 w-50 mx-auto my-4 bg-danger-subtle shadow">
         <div class="row ">
             <div class="col-lg-3 col-12">
                 <img class="img-fluid" src="images/cycleD.gif" alt="Cyclophilin B">
@@ -129,12 +116,6 @@
             </div>
         </div>
     </div>
-    <br>
-    <div class="divider"></div>
-    <!-- Divider -->
-
-
-
 </body>
 
 </html>
